--- a/Lab23/Views/Home/Index.cshtml
+++ b/Lab23/Views/Home/Index.cshtml
@@ -8,25 +8,4 @@
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
-<h2>Items</h2>
-<table>
-    <tr>
-        <th>ItemID</th>
-        <th>Name</th>
-        <th>Description</th>
-        <th>Quantity</th>
-        <th>Price</th>
-    </tr>
-
-    @for (int i = 0; i < ViewBag.Items.Count; i++)
-    {
-    <tr>
-        <td>@ViewBag.Items[i].ID</td>
-        <td>@ViewBag.Items[i].Name</td>
-        <td>@ViewBag.Items[i].Description</td>
-        <td>@ViewBag.Items[i].Quantity</td>
-        <td>@ViewBag.Items[i].Price</td>
-        <td><button type="submit">Add</button></td>
-    </tr>
-    }
-</table>
+<h2>Welcome to our Coffee Shop</h2>
